--- a/Create a resource/package.json
+++ b/Create a resource/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "06",
+  "name": "nodescript",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.1.0",
+    "@sinclair/typebox": "^0.24.20",
+    "ajv-formats": "^2.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-json-validator-middleware": "^3.0.1",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "supertest": "^6.2.4"
