--- a/package.json
+++ b/package.json
@@ -1,8 +1,27 @@
 {
+  "name": "nodescript",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "jest",
+    "start": "nodemon"
+  },
   "devDependencies": {
     "prisma": "^4.2.1"
   },
   "dependencies": {
-    "@prisma/client": "^4.2.1"
+    "@prisma/client": "^4.2.1",
+    "cors": "^2.8.5",
+    "@sinclair/typebox": "^0.24.20",
+    "ajv-formats": "^2.1.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-json-validator-middleware": "^3.0.1",
+    "jest": "^28.1.3",
+    "mime": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   }
 }
