--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@prisma/client": "^4.2.1",
     "cors": "^2.8.5",
+    "express-session": "^1.17.3",
     "@sinclair/typebox": "^0.24.20",
     "ajv-formats": "^2.1.1",
     "dotenv": "^16.0.1",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "express": "^4.18.1",
     "express-json-validator-middleware": "^3.0.1",
     "jest": "^28.1.3",
